codama-macros/tests/codama_attribute/attribute_directive/name_missing.fail.rs
use codama::codama;

#[codama(account)]
pub struct Test;

#[codama(account(signer, writable))]
pub struct TestWithBooleans;

fn main() {}
